--- a/concieggs.conf
+++ b/concieggs.conf
@@ -1,8 +1,8 @@
 # Note that this is just a shell script.
 
 irc_dir=$HOME/irc
-irc_username="boteggstest"
-irc_realname="eggs"
-irc_channel='#foobaztest'
-irc_error_channel='#foobaztesterr'
-irc_greeting="$irc_username til tjeneste."
+irc_username="iircbot"
+irc_realname="hendry's bot"
+irc_channel='#foobar'
+irc_error_channel='#foobarerr'
+irc_greeting="$irc_username is https://github.com/kaihendry/iircbot"
