--- a/concieggs.conf
+++ b/concieggs.conf
@@ -3,6 +3,6 @@
 irc_dir=$HOME/irc
 irc_username="iircbot"
 irc_realname="hendry's bot"
-irc_channel='#foobar'
-irc_error_channel='#foobarerr'
+irc_channel='#hackerspacesg'
+irc_error_channel='#iiboterr'
 irc_greeting="$irc_username is https://github.com/kaihendry/iircbot"
